--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
           <img src="./images/logo/Booki.png" alt="logo Booki" />
         </div>
         <nav class="menu">
-            <ul>
-              <li><a href="#Hebergement">Hébergement</a></li>
-              <li><a href="#Activites">Activités</a></li>
-            </ul>
+          <ul>
+            <li><a href="#Hebergements">Hébergement</a></li>
+            <li><a href="#Activites">Activités</a></li>
+          </ul>
         </nav>
       </header>
       <main>
@@ -59,41 +59,38 @@
           </div>
 
           <div class="filters-container">
-            <h2 class="filters-title">Filtres</h2>
-            <div class="filter-items">
-              <div class="filter">
-                <div class="iconfilter">
-                  <i class="fas fa-money-bill-wave "></i>
-                </div>
-                  <span class="filter-title">Économique</span>
+            <h2>Filtres</h2>
+            <div class="filter">
+              <div class="iconsfilter">
+                <i class="fas fa-money-bill-wave"></i>
               </div>
-              <div class="filter">
-                <div class="iconfilter">
-                  <i class="fas fa-child "></i>
-                </div>
-                <span class="filter-title">Familial</span>
-              </div>           
-              <div class="filter">
-                <div class="iconfilter">
-                  <i class="fas fa-heart"></i>
-                </div>
-                <span class="filter-title">Romantique</span>
+              <p>Économique</p>
+            </div>
+            <div class="filter">
+              <div class="iconsfilter">
+                <i class="fas fa-child"></i>
               </div>
-              <div class="filter">
-                <div class="iconfilter">
-                  <i class="fas fa-fire "></i>
-                </div>
-                <span class="filter-title">Nos pépites</span>
+              <p>Familial</p>
+            </div>
+            <div class="filter">
+              <div class="iconsfilter">
+                <i class="fas fa-heart"></i>
               </div>
+              <p>Romantique</p>
+            </div>
+            <div class="filter">
+              <div class="iconsfilter">
+                <i class="fas fa-fire"></i>
+              </div>
+              <p>Nos pépites</p>
             </div>
           </div>
+
           <div class="info">
             <div class="iconinfo">
               <i class="fas fa-info"></i>
             </div>
-            <p class="info-text">
-              Plus de 500 logements sont disponibles dans cette ville
-            </p>
+            <p>Plus de 500 logements sont disponibles dans cette ville</p>
           </div>
         </section>
 
@@ -104,9 +101,11 @@
             </div>
             <div class="hebergements-cartes">
               <a href="#">
-                <div class="carte">
-                  <img src="./images/hebergements/fred-kleber.jpg" 
-                  alt="Image de la chambre montrant deux lits" />
+                <article class="carte">
+                  <img
+                    src="./images/hebergements/fred-kleber.jpg"
+                    alt="Image de la chambre montrant deux lits"
+                  />
                   <div class="carte-content">
                     <div class="carte-txt">
                       <h3 class="carte-title truncate">Hôtel du port</h3>
@@ -127,10 +126,10 @@
                       <span class="sr-only">Note de 4 sur 5</span>
                     </div>
                   </div>
-                </div>
+                </article>
               </a>
               <a href="#">
-                <div class="carte">
+                <article class="carte">
                   <img
                     src="./images/hebergements/febrian-zakaria.jpg"
                     alt="Image de la chambre montrant deux lits"
@@ -155,17 +154,17 @@
                       <span class="sr-only">Note de 4 sur 5</span>
                     </div>
                   </div>
-                </div>
+                </article>
               </a>
               <a href="#">
-                <div class="carte">
+                <article class="carte">
                   <img
                     src="./images/hebergements/reisetopia.jpg"
                     alt="Image de la chambre montrant un grand lit"
                   />
                   <div class="carte-content">
                     <div class="carte-txt">
-                      <h3 class="carte-title truncate">Hôtels Les Mouettes</h3>
+                      <h3 class="carte-title truncate">Hôtels Les Mouettes </h3>
                       <p class="=carte-subtitle">
                         Nuit à partir de 76<span class="euro">€</span>
                       </p>
@@ -183,12 +182,12 @@
                       <span class="sr-only">Note de 4 sur 5</span>
                     </div>
                   </div>
-                </div>
+                </article>
               </a>
             </div>
             <div class="hebergements-cartes">
               <a href="#">
-                <div class="carte">
+                <article class="carte">
                   <img
                     src="./images/hebergements/annie-spratt.jpg"
                     alt="Image de la chambre montrant un grand lit"
@@ -213,17 +212,17 @@
                       <span class="sr-only">Note de 4 sur 5</span>
                     </div>
                   </div>
-                </div>
+                </article>
               </a>
               <a href="#">
-                <div class="carte">
+                <article class="carte">
                   <img
                     src="./images/hebergements/marcus-loke.jpg"
                     alt="Image de la chambre montrant un lit "
                   />
                   <div class="carte-content">
                     <div class="carte-txt">
-                      <h3 class="carte-title truncate">Auberge La cannebière</h3>
+                      <h3 class="carte-title truncate">Auberge la cannebière</h3>
                       <p class="=carte-subtitle">
                         Nuit à partir de 25<span class="euro">€</span>
                       </p>
@@ -241,10 +240,10 @@
                       <span class="sr-only">Note de 4 sur 5</span>
                     </div>
                   </div>
-                </div>
+                </article>
               </a>
               <a href="#">
-                <div class="carte">
+                <article class="carte">
                   <img
                     src="./images/hebergements/nicate-lee.jpg"
                     alt="Image de la chambre montrant deux lits"
@@ -269,80 +268,106 @@
                       <span class="sr-only">Note de 4 sur 5</span>
                     </div>
                   </div>
-                </div>
+                </article>
               </a>
             </div>
-
             <a class="showmore" href="#">Afficher plus</a>
+                   
           </section>
           <section class="populaires">
             <div class="populaires-title">
               <h2 class="section-title">Les plus populaires</h2>
               <i class="fa-solid fa-chart-line" aria-hidden="true"></i>
-          </div>
-          <div class="populaires-cards">
+            </div>
+            <div class="populaires-cards">
               <a href="#">
-                  <article class="card">
-                      <img src="./images/hebergements/emile-guillemot.jpg" alt="Image de la chambre d'hôtel montrant un lit">
-                      <div class="card-content">
-                          <div class="card-txt">
-                              <h3 class="card-title">Hôtel Le soleil du matin</h3>
-                              <p class="card-subtitle">Nuit à partir de 128<span class="euro">€</span></p>
-                          </div>
-                          <div class="card-rating">
-                              <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                              <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                              <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                              <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                              <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
-                              <span class="sr-only">Note de 4 sur 5</span>
-                          </div>
-                      </div>
-                  </article>
+                <article class="card">
+                  <img
+                    src="./images/hebergements/emile-guillemot.jpg"
+                    alt="Image de la chambre d'hôtel montrant un lit"
+                  />
+                  <div class="card-content">
+                    <div class="card-txt">
+                      <h3 class="card-title">Hôtel Le soleil du matin</h3>
+                      <p class="card-subtitle">
+                        Nuit à partir de 128<span class="euro">€</span>
+                      </p>
+                    </div>
+                    <div class="card-rating">
+                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                      <i
+                        class="fa-xs fa-solid fa-star neutral-star"
+                        aria-hidden="true"
+                      ></i>
+                      <span class="sr-only">Note de 4 sur 5</span>
+                    </div>
+                  </div>
+                </article>
               </a>
               <a href="#">
-                  <article class="card">
-                      <img src="./images/hebergements/aw-creative.jpg" alt="Image de la chambre d'hôtel montrant un lit">
-                      <div class="card-content">
-                          <div class="card-txt">
-                              <h3 class="card-title">Chambres d’hôtes Au cœur de l’eau</h3>
-                              <p class="card-subtitle">Nuit à partir de 71<span class="euro">€</span></p>
-                          </div>
-                          <div class="card-rating">
-                              <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                              <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                              <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                              <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                              <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
-                              <span class="sr-only">Note de 4 sur 5</span>
-                          </div>
-                      </div>
-                  </article>
+                <article class="card">
+                  <img
+                    src="./images/hebergements/aw-creative.jpg"
+                    alt="Image de la chambre d'hôtel montrant un lit"
+                  />
+                  <div class="card-content">
+                    <div class="card-txt">
+                      <h3 class="card-title">
+                        Chambres d’hôtes Au cœur de l’eau
+                      </h3>
+                      <p class="card-subtitle">
+                        Nuit à partir de 71<span class="euro">€</span>
+                      </p>
+                    </div>
+                    <div class="card-rating">
+                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                      <i
+                        class="fa-xs fa-solid fa-star neutral-star"
+                        aria-hidden="true"
+                      ></i>
+                      <span class="sr-only">Note de 4 sur 5</span>
+                    </div>
+                  </div>
+                </article>
               </a>
               <a href="#">
-                  <article class="card">
-                      <img src="./images/hebergements/febrian-zakaria2.jpg" alt="Image de la chambre d'hôtel montrant un lit">
-                      <div class="card-content">
-                          <div class="card-txt">
-                              <h3 class="card-title">Hôtel Bleu et Blanc</h3>
-                              <p class="card-subtitle">Nuit à partir de 68<span class="euro">€</span></p>
-                          </div>
-                          <div class="card-rating">
-                              <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                              <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                              <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                              <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                              <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
-                              <span class="sr-only">Note de 4 sur 5</span>
-                          </div>
-                      </div>
-                  </article>
+                <article class="card">
+                  <img
+                    src="./images/hebergements/febrian-zakaria2.jpg"
+                    alt="Image de la chambre d'hôtel montrant un lit"
+                  />
+                  <div class="card-content">
+                    <div class="card-txt">
+                      <h3 class="card-title">Hôtel Bleu et Blanc</h3>
+                      <p class="card-subtitle">
+                        Nuit à partir de 68<span class="euro">€</span>
+                      </p>
+                    </div>
+                    <div class="card-rating">
+                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                      <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                      <i
+                        class="fa-xs fa-solid fa-star neutral-star"
+                        aria-hidden="true"
+                      ></i>
+                      <span class="sr-only">Note de 4 sur 5</span>
+                    </div>
+                  </div>
+                </article>
               </a>
-          </div>
-
-        </section>        </div>
-        <div class="container-activites">
-          <div class="activites-title">
+            </div>
+          </section>
+        </div>
+        <section class="activites">
+          <div class="activites">
             <h2 class="section-title">Activités à Marseille</h2>
           </div>
           <div class="activites-photos">
@@ -351,8 +376,10 @@
                 src="./images/activites/reno-laithienne.jpg"
                 alt="image montrant le port de marseille"
               />
-              <div class="photo-txt">
-                <h3 class="photo-title">Vieux Port</h3>
+              <div class="photo-conten">
+                <div class="photo-txt">
+                  <h3 class="photo-title ">Vieux Port</h3>
+                </div>
               </div>
             </div>
             <div class="photo">
@@ -379,11 +406,11 @@
                 alt="image montrant une cathedrale"
               />
               <div class="photo-txt">
-                <h3 class="photo-title">Notre Dame-de-la-Garde</h3>
+                <h3 class="photo-title ">Notre Dame-de-la-Garde</h3>
               </div>
             </div>
           </div>
-        </div>
+        </section>
       </main>
       <footer>
         <div class="container-footer">
